Final styling details

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pac-Man</title>
+  <title>PAC-MAN</title>
 
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Pac-Man</h1>
-  <h3>Score: <span id="score"></span></h3>
-  <div class="grid"></div>
+  <div class="container">
+    <h2>PAC-MAN</h2>
+    <h3>Score: <span id="score"></span></h3>
+    <div class="grid"></div>
+  </div>
 
   <script src="app.js"></script>
 </body>
